--- a/about.Rmd
+++ b/about.Rmd
@@ -18,3 +18,6 @@ I am seeking internship opportunities as a Data Analyst or Data Scientist.
   + Outlook 
 
 Email: chenxiliu02@gmail.com
+\
+Instagram: 
+[\@chenxiliu233](https://www.instagram.com/chenxiliu233/)
