build my website commit

--- a/about.Rmd
+++ b/about.Rmd
@@ -19,5 +19,4 @@ I am seeking internship opportunities as a Data Analyst or Data Scientist.
 
 Email: chenxiliu02@gmail.com
 \
-Instagram: 
-[\@chenxiliu233](https://www.instagram.com/chenxiliu233/)
+Instagram: [\@chenxiliu233](https://www.instagram.com/chenxiliu233/)
