--- a/about.Rmd
+++ b/about.Rmd
@@ -5,7 +5,7 @@ output:
    toc: true
    toc_float: true
 ---
-<img src=".\images\DSC01420.jpg" style="width:50%">
+<img src=".\images\me.jpg" style="width:50%">
 
 ## Education
 
