--- a/index.Rmd
+++ b/index.Rmd
@@ -9,16 +9,18 @@ Welcome to my website!
 <img src=".\images\ds.jpg" style="width:100%">
 I love data science, statistics and coding!
 
-I am a first-year MS student majoring in biostatistics at Columbia University School of Public Health. I am a highly motivated student passionate about data science, statistics, coding, machine learning, database management, consulting, risk, and technology application. I have professional experiences in Statistical Analysis, Modeling, Inference, Regression, Data Visualization, Python, SQL, and R programming. 
+I am a business analyst at Lumenis, a medical device company in San Jose. I recieved my MS majoring in biostatistics at Columbia University School of Public Health.  I am a highly motivated student passionate about data science, statistics, coding, machine learning, database management, consulting, risk, and technology application. I have professional experiences in Statistical Analysis, Modeling, Inference, Regression, Data Visualization, Python, SQL, and R programming. 
 
 I am seeking internship opportunities as a Data Analyst or Data Scientist.
 
 * Specialties:
-  + R
-  + Python
+  + R(tidyverse, caret)
+  + Python(numpy, pandas, scikit-learn)
   + SQL
-  + Microsoft Office (Excel, Word, Powerpoint)
-  + Outlook 
+  + Matlab
+  + PowerBI 
+  + Tableau
+  + SAS
 
 ## [My Rusume](about.html)
 * click above to view my resume
